<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.al.app.geopatrol.activitys.PostPatrolActivity">
    <item
        android:id="@+id/post_type_ck"
        android:icon="@mipmap/location"

        android:title="@string/post_ck"

        />
    <item
        android:id="@+id/post_type_sb"
        android:icon="@mipmap/location"
        android:title="@string/post_s"
        />

    <item
        android:id="@+id/post_type_wz"
        android:icon="@mipmap/location"
        android:title="@string/post_wz"
        />
    <item
        android:id="@+id/post_type_sg"
        android:icon="@mipmap/location"
        android:title="@string/post_sg"
        />
    <item
        android:id="@+id/post_type_sz"
        android:icon="@mipmap/location"
        android:title="@string/post_z"
        />
    <item
        android:id="@+id/post_type_w"
        android:icon="@mipmap/location"
        android:title="@string/post_w"
        />
    <item
        android:id="@+id/post_type_qt"
        android:icon="@mipmap/location"
        android:title="@string/post_qt"
        />
</menu>
