<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.al.app.geopatrol.activitys.HomeActivity"
    tools:showIn="@layout/activity_home">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/records_layout">

        <Button
            android:id="@+id/post_patrol_div"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:background="@drawable/bt_blue"
            android:layout_weight="1"

            android:textSize="@dimen/abc_text_size_medium_material"
            android:textColor="@color/ivory"
            android:text="@string/title_activity_post_patrol" />

        <Button
            android:id="@+id/records_div"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:background="@drawable/bt_yellow"
            android:layout_weight="1"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:textColor="@color/ivory"
            android:text="@string/title_activity_records" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/records_task_layout"
        >
        <Button
            android:id="@+id/task_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:background="@drawable/bt_red"
            android:layout_weight="1"

            android:textSize="@dimen/abc_text_size_medium_material"
            android:textColor="@color/ivory"
            android:text="@string/title_activity_task" />
        <Button
            android:id="@+id/message_div"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bt_green"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:textColor="@color/ivory"
            android:text="@string/title_activity_message" />



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/risk_layout">

        <Button
            android:id="@+id/post_risk_div"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:background="@drawable/bt_blue"
            android:layout_weight="1"

            android:textSize="@dimen/abc_text_size_medium_material"
            android:textColor="@color/ivory"
            android:text="@string/title_activity_risk_reporting" />

        <Button
            android:id="@+id/risk_track_div"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:background="@drawable/bt_yellow"
            android:layout_weight="1"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:textColor="@color/ivory"
            android:text="@string/title_activity_risk_track" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/risk_show_layout">
        <Button
            android:id="@+id/risks_div"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:background="@drawable/bt_red"
            android:layout_weight="1"

            android:textSize="@dimen/abc_text_size_medium_material"
            android:textColor="@color/ivory"
            android:text="@string/title_activity_risks" />
        <Button
            android:id="@+id/risk_message_div"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bt_green"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:textColor="@color/ivory"
            android:text="@string/title_activity_message" />



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:textColor="@color/ivory"
            android:text="地图"
            android:visibility="gone" />

        <Button
            android:id="@+id/exit_div"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/bt_gray"

            android:textSize="@dimen/abc_text_size_medium_material"
            android:textColor="@color/ivory"
            android:text="@string/exit_application" />

    </LinearLayout>

    <TextView
        android:id="@+id/gps_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:text="@string/gps_loading"
        android:textAlignment="center"
        android:textSize="8sp" />

</LinearLayout>